Fix overflow scrollbar issue

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -16,6 +16,7 @@ body {
   background-image: url(img/bg.jpg);
   background-size: cover;
   color: #fff;
+  overflow: hidden;
 }
 
 * {
